@startuml
' Reservation System – Keys-only ERD (technical + business keys + foreign keys)

hide circle
skinparam linetype ortho
skinparam shadowing false

entity "Business" as business {
  * id : uuid <<PK>>
  --
  * slug : string <<UK>>
}

entity "Location" as location {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * slug : string <<UK>>  ' unique within business (enforce via composite in DB)
}

entity "User" as user {
  * id : uuid <<PK>>
  --
  * email : string <<UK>>
}

entity "BusinessUser" as businessUser {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * userId : uuid <<FK>>
  * roleId : uuid <<FK>>
  * businessUserKey : string <<UK>> ' optional business key (e.g., invite/code); can be dropped if not needed
}

entity "Role" as role {
  * id : uuid <<PK>>
  --
  * code : string <<UK>>  ' OWNER / MANAGER / STAFF
}

entity "Staff" as staff {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * locationId : uuid <<FK>>
}

entity "Service" as service {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * serviceCode : string <<UK>> ' optional business key (internal code); can be dropped if not needed
}

entity "StaffService" as staffService {
  * id : uuid <<PK>>
  --
  * staffId : uuid <<FK>>
  * serviceId : uuid <<FK>>
  * staffServiceKey : string <<UK>> ' optional (or enforce unique(staffId, serviceId))
}

entity "Client" as client {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * email : string <<UK>>
  * phone : string <<UK>>
}

entity "Booking" as booking {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * locationId : uuid <<FK>>
  * serviceId : uuid <<FK>>
  * staffId : uuid <<FK>>
  * clientId : uuid <<FK>>
  * publicRef : string <<UK>>  ' human-friendly reference
}

entity "Block" as block {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * locationId : uuid <<FK>>
  * staffId : uuid <<FK>>  ' nullable if block applies to whole location/business
}

entity "Payment" as payment {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * bookingId : uuid <<FK>>
  * providerRef : string <<UK>> ' idempotency / external reference
}

entity "Package" as package {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * packageCode : string <<UK>> ' optional business key
}

entity "EntitlementLedger" as entitlement {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * clientId : uuid <<FK>>
  * packageId : uuid <<FK>>
  * bookingId : uuid <<FK>> ' nullable (only for redemption entries)
}

entity "Consent" as consent {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * clientId : uuid <<FK>>
  * consentKey : string <<UK>> ' e.g., marketing/email, terms-v1
}

entity "AuditEvent" as audit {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * actorUserId : uuid <<FK>>
  * bookingId : uuid <<FK>>  ' nullable
  * clientId : uuid <<FK>>   ' nullable
}

entity "ApiKey" as apiKey {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * keyId : string <<UK>> ' public identifier (never store raw secret as UK)
}

entity "WebhookEndpoint" as webhook {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * endpointKey : string <<UK>>
}

entity "WebhookDelivery" as delivery {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * webhookEndpointId : uuid <<FK>>
  * eventId : uuid <<FK>> ' FK to AuditEvent (or separate Event table)
  * deliveryKey : string <<UK>> ' idempotency key
}

entity "ExternalCalendar" as extCal {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * staffId : uuid <<FK>>
  * providerAccountId : string <<UK>>
}

entity "BusyBlock" as busy {
  * id : uuid <<PK>>
  --
  * businessId : uuid <<FK>>
  * staffId : uuid <<FK>>
  * externalCalendarId : uuid <<FK>>
  * providerEventId : string <<UK>>
}

' Relationships
business ||--o{ location : has
business ||--o{ staff : has
business ||--o{ service : has
business ||--o{ client : has
business ||--o{ booking : has
business ||--o{ block : has
business ||--o{ payment : has
business ||--o{ package : has
business ||--o{ entitlement : has
business ||--o{ consent : has
business ||--o{ audit : has
business ||--o{ apiKey : has
business ||--o{ webhook : has
business ||--o{ delivery : has
business ||--o{ extCal : has
business ||--o{ busy : has

location ||--o{ staff : hosts
location ||--o{ booking : occurs_at
location ||--o{ block : blocked_at

user ||--o{ businessUser : member_of
role ||--o{ businessUser : grants
business ||--o{ businessUser : has_members

staff ||--o{ staffService : can_do
service ||--o{ staffService : is_assigned

service ||--o{ booking : booked_service
staff ||--o{ booking : booked_staff
client ||--o{ booking : booked_by

booking ||--o{ payment : paid_by
client ||--o{ entitlement : owns
package ||--o{ entitlement : ledger_for
booking ||--o{ entitlement : redeemed_in

client ||--o{ consent : has
user ||--o{ audit : acts
booking ||--o{ audit : relates
client ||--o{ audit : relates

webhook ||--o{ delivery : sends
audit ||--o{ delivery : emits

staff ||--o{ extCal : syncs
extCal ||--o{ busy : imports
staff ||--o{ busy : blocks

@enduml